@@ -898,6 +898,12 @@ bool DCItem::transform(ItemValue &value, time_t nElapsedTime)
             }
          }
       }
+      else if (m_transformationScript->getErrorCode() == NXSL_ERR_EXECUTION_ABORTED)
+      {
+         DbgPrintf(6, _T("Transformation script for DCI \"%s\" [%d] on node %s [%d] aborted"), 
+            m_szDescription, m_dwId, (m_pNode != NULL) ? m_pNode->Name() : _T("(null)"), (m_pNode != NULL) ? m_pNode->Id() : 0);
+         success = false;
+      }
       else
       {
          TCHAR szBuffer[1024];
